исправления по замечаниям убран N+1